--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <div class="container">
       <div class="logo">
         <span class="icon">🏏</span>
-        <span>Sports Academy</span>
+        <span>MRK Academy</span>
       </div>
       <nav class="nav">
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#programs">Programs</a>
-        <a href="./contact/contact.html">Contact</a>
+        <a href="./tournaments">Tournaments</a>
+        <a href="./contact">Contact</a>
       </nav>
       <div class="hamburger" id="hamburger">
         <span></span>
@@ -33,7 +34,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content">
-      <h1>Unleash Your Potential with <span>Sports Academy</span></h1>
+      <h1>Unleash Your Potential with <span>MRK Academy</span></h1>
       <p>Your gateway to mastering your favorite sport with expert guidance and cutting-edge facilities. Start your journey today!</p>
       <a href="#programs" class="cta-btn">Join Now</a>
     </div>
@@ -63,54 +64,94 @@
 </section>
 
 <section class="sports-provided" id="programs">
-    <div class="containe">
-      <h2>Our Sports</h2>
-      <div class="sports-list">
-        <div class="sport-item">
-          <div class="icon-container">
-            <img src="basketball-icon.png" alt="Basketball">
-          </div>
-          <h3>Basketball</h3>
-          <p>Enhance your skills with our basketball training sessions.</p>
-        </div>
-        <div class="sport-item">
-          <div class="icon-container">
-            <img src="football-icon.png" alt="Football">
-          </div>
-          <h3>Football</h3>
-          <p>Join our football academy and master the art of passing, dribbling, and scoring goals.</p>
-        </div>
-        <div class="sport-item">
-          <div class="icon-container">
-            <img src="badminton-icon.png" alt="Badminton">
-          </div>
-          <h3>Badminton</h3>
-          <p>Learn the fundamentals and advanced techniques of badminton with our experienced coaches.</p>
-        </div>
-        <div class="sport-item">
-          <div class="icon-container">
-            <img src="tennis-icon.png" alt="Tennis">
-          </div>
-          <h3>Tennis</h3>
-          <p>Take your game to the next level with personalized tennis coaching.</p>
-        </div>
-        <div class="sport-item">
-          <div class="icon-container">
-            <img src="swimming-icon.png" alt="Swimming">
-          </div>
-          <h3>Swimming</h3>
-          <p>Our swimming program covers everything from basic strokes to competitive swimming.</p>
-        </div>
-        <div class="sport-item">
+  <div class="containe">
+    <h2>Our Sports</h2>
+    <div class="sports-list">
+      <div class="sport-item">
+        <a href="our-sports/athletics.html">
           <div class="icon-container">
             <img src="athletics-icon.png" alt="Athletics">
           </div>
           <h3>Athletics</h3>
           <p>Get into top shape with our athletics programs, including running and field events.</p>
-        </div>
+          <h5 class="detail-button">Details <i class="fa-solid fa-chevron-right"></i></h5>
+        </a>
       </div>
+      <div class="sport-item">
+        <a href="our-sports/basketball.html">
+          <div class="icon-container">
+            <img src="basketball-icon.png" alt="Basketball">
+          </div>
+          <h3>Basketball</h3>
+          <p>Enhance your skills with our basketball training sessions.</p>
+          <h5 class="detail-button">Details <i class="fa-solid fa-chevron-right"></i></h5>
+        </a>
+      </div>
+      <div class="sport-item">
+        <a href="our-sports/cricket.html">
+          <div class="icon-container">
+            <img src="cricket-icon.png" alt="Cricket">
+          </div>
+          <h3>Cricket</h3>
+          <p>Join our cricket academy and learn batting, bowling, and fielding techniques.</p>
+          <h5 class="detail-button">Details <i class="fa-solid fa-chevron-right"></i></h5>
+        </a>
+      </div>
+      <div class="sport-item">
+        <a href="our-sports/tennis.html">
+          <div class="icon-container">
+            <img src="tennis-icon.png" alt="Tennis">
+          </div>
+          <h3>Tennis</h3>
+          <p>Take your game to the next level with personalized tennis coaching.</p>
+          <h5 class="detail-button">Details <i class="fa-solid fa-chevron-right"></i></h5>
+        </a>
+      </div>
+      <div class="sport-item">
+        <a href="our-sports/handball.html">
+          <div class="icon-container">
+            <img src="handball-icon.png" alt="Handball">
+          </div>
+          <h3>Handball</h3>
+          <p>Master the skills of handball, including fast breaks and team defense strategies.</p>
+          <h5 class="detail-button">Details <i class="fa-solid fa-chevron-right"></i></h5>
+        </a>
+      </div>
+      <div class="sport-item">
+        <a href="our-sports/badminton.html">
+          <div class="icon-container">
+            <img src="badminton-icon.png" alt="Badminton">
+          </div>
+          <h3>Badminton</h3>
+          <p>Learn the fundamentals and advanced techniques of badminton with our experienced coaches.</p>
+          <h5 class="detail-button">Details <i class="fa-solid fa-chevron-right"></i></h5>
+        </a>
+      </div>
+      <div class="sport-item traditional-sport">
+        <a href="our-sports/khokho.html">
+          <div class="icon-container">
+            <img src="kho-kho-icon.png" alt="Kho-Kho">
+          </div>
+          <h3>Kho-Kho</h3>
+          <p>Experience the excitement of Kho-Kho, a traditional Indian tag sport.</p>
+          <h5 class="detail-button">Details <i class="fa-solid fa-chevron-right"></i></h5>
+        </a>
+      </div>
+      <div class="sport-item traditional-sport">
+        <a href="our-sports/kabbadi.html">
+          <div class="icon-container">
+            <img src="kabaddi-icon.png" alt="Kabaddi">
+          </div>
+          <h3>Kabaddi</h3>
+          <p>Join our Kabaddi sessions and master this intense and strategic sport.</p>
+          <h5 class="detail-button">Details <i class="fa-solid fa-chevron-right"></i></h5>
+        </a>
+      </div> 
     </div>
-  </section>
+       
+  </div>
+</section>
+
 
   <section class="about-section" id="about">
     <div class="containe">
