--- a/our-sports/handball.html
+++ b/our-sports/handball.html
@@ -6,6 +6,41 @@
   <title>Handball - Sports Academy</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/sports.css">
+
+  <script>
+    async function handleSubmit(event) {
+      event.preventDefault(); // Prevent default form submission
+
+      const form = event.target;
+      const formData = new FormData(form);
+      const data = {};
+
+      // Convert FormData to a plain object
+      formData.forEach((value, key) => {
+        data[key] = value;
+      });
+
+      try {
+        // Send the form data to the Google Apps Script
+        const response = await fetch('https://script.google.com/macros/s/AKfycbz5qizSZYsT9c0HxGNaMSUKZ0EqVAVMHIrO-H8SnzvUFKxFg9KBOonzauE055XHkrOT5Q/exec', {
+          method: 'POST',
+          body: new URLSearchParams(data)
+        });
+
+        // Check if the response is successful
+        if (response.ok) {
+          // Redirect to the success page
+          window.location.href = '/our-sports/success.html';
+        } else {
+          // Handle any errors from the Apps Script
+          alert('There was an error with your registration. Please try again.');
+        }
+      } catch (error) {
+        alert('An error occurred while submitting the form. Please try again.');
+      }
+    }
+  </script>
+
 </head>
 <body>
 
@@ -33,7 +68,8 @@
     <!-- Registration Form Section -->
     <section class="registration-form">
         <h3>Register for Handball</h3>
-        <form action="your-form-handler-url" method="POST">
+        <form action="https://script.google.com/macros/s/AKfycbz5qizSZYsT9c0HxGNaMSUKZ0EqVAVMHIrO-H8SnzvUFKxFg9KBOonzauE055XHkrOT5Q/exec" method="POST"  onsubmit="handleSubmit(event)">
+          <input type="hidden" name="sport" value="Handball">
           <div class="input-group">
             <input type="text" name="name" placeholder="Your Name" required>
             <div class="input-border"></div>
