--- a/our-sports/success.html
+++ b/our-sports/success.html
@@ -75,7 +75,7 @@
     <section class="success-message">
       <h3>Registration Successful!</h3>
       <p>Thank you for registering for this program. We will get in touch with you shortly with further details.</p>
-      <p><a href="../index.html">Go back to the homepage</a></p>
+      <p><a href="../">Go back to the homepage</a></p>
     </section>
   </div>
 
