--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <span>MRK Academy</span>
       </div>
       <nav class="nav">
-        <a href="#home" class="nav-link">Home</a>
+        <!-- <a href="#home" class="nav-link">Home</a> -->
         <a href="#about" class="nav-link">About</a>
         <a href="#programs" class="nav-link">Programs</a>
         <a href="./tournaments" class="nav-link">Tournaments</a>
         <a href="./contact" class="nav-link">Contact</a>
+        <a href="./contact" class="nav-link">Portfolio</a>
       </nav>
       <div class="hamburger" id="hamburger">
         <span></span>
